--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,294 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Onwin - Bahis ve Casino Platformudur ✔️ Güncel Giriş Adresi 2023</title>
+    <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <div class="header__logo">
+        <a href="/">
+          <img src="images/logo.svg" alt="onwin logo" class="logo">
+        </a>
+      </div>
+      <nav class="header__menu">
+        <ul id="menu-top" class="menu">
+          <li id="menu-item-45" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2 current_page_item menu-item-45"><span><a href="/">Kayıt ol</a></span></li>
+          <li id="menu-item-5159" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5159"><a href="/">Giriş yap</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main">
+        <ul class="contacts">
+          <li><a href="#giris">Onwin Giriş</a></li>
+          <li><a href="#guvenilir">Onwin Güvenilir mi?</a></li>
+          <li><a href="#bonus">Onwin Bonusları</a></li>
+          <li><a href="#finansal">Onwin Finansal İşlemler</a></li>
+          <li><a href="#yatirma">Onwin Para Yatırma</a></li>
+          <li><a href="#cekme">Onwin Para Çekme</a></li>
+          <li><a href="#destek">Onwin Canlı Destek</a></li>
+          <li><a href="#tm">Onwin Telegram</a></li>
+          <li><a href="#mail">Onwin Mail Destek</a></li>
+          <li><a href="#watsapp">Onwin Watsapp</a></li>
+          <li><a href="#uyelik">Onwin Üyelik</a></li>
+        </ul>
+      <h1 class="main-title">Onwin</h1>
+      <p class="main__paragraph">Onwin, çevrimiçi bir bahis ve casino platformudur. Geniş bir spor bahisleri seçeneği 
+        sunar ve popüler casino oyunlarına erişim sağlar. Güvenilir bir lisansa sahip olan 
+        Onwin, oyunculara güvenli ve adil bir oyun ortamı sunar. Hızlı ve kolay bir kayıt 
+        süreciyle kullanıcılarının hesap açmasını sağlar. Onwin, müşteri hizmetleri desteğiyle
+        7/24 iletişim imkanı sunarak kullanıcılarına sorularını yanıtlar ve destek sağlar.
+      </p>
+      <p class="main__paragraph">Onwin firmasının öne çıkan firma bilgileri ise aşağıdaki tabloda yer almaktadır ve detaylar şu şekildedir:</p>
+      <table class="table">
+        <tr class="table-row">
+          <td class="table-title first-table-title">Kuruluş Yılı</td>
+          <td class="table-description">2014</td>
+        </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">Firma Adı</td>
+          <td class="table-description">Onwin</td>
+        </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">Lisans</td>
+          <td class="table-description">Curacao / JAZ</td>
+        </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">Ofisinin Bulunduğu Ülkeler</td>
+          <td class="table-description">İngiltere, Almanya, Cezayir, Fas, Tunus, Gürcistan, Azerbaycan,Ukrayna, Kıbrıs</td>
+        </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">Para Transfer Limiti</td>
+          <td class="table-description">Min 50 TL Maks 250.000 TL</td>
+        </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">Günlük Para Çekme Hakkı</td>
+          <td class="table-description">1</td>
+        </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">İletişim</td>
+          <td class="table-description">Canlı destek, e-posta, destek sistemi, sosyal medya</td>
+        </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">Hesap Doğrulama ve Belge Talebi</td>
+          <td class="table-description">Aktif</td>
+        </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">Hızlı Üyelik</td>
+          <td class="table-description">Mevcut</td>
+        </tr>
+      </table>
+      <p class="main__paragraph">Yukarıda da görüldüğü üzere kurumsallığı, sistemi ve kazanç oranlarıyla öne çıkan 
+        Onwin firması, bu tür nedenlerden ötürü Türkiye’de kısa süre içerisinde çok kısa 
+        sürede yüz binlerce yatırımcıya hitap etmeye başlamıştır. Firmanın kazançları 
+      </p>
+      <p class="main__paragraph">dışında sağlamış olduğu güvenilir hizmet de öne çıkan özelliklerinden biridir. 
+        Yatırımcılar gerek para yatırırken gerekse para çekim işlemleri esnasında sağlanan 
+        hızlı hizmetten büyük memnuniyet duymaktadırlar. Bu yüzden gönül rahatlığıyla 
+        işlemlerini gerçekleştirerek, para kazanma gibi bir konuyu ya da kaygıya kapılmadan,
+        direkt olarak bahis keyfini sürme gibi bir eylem içerisinde olurlar.
+      </p>
+      <h2 id=’’giris”>Onwin Giriş</h2>
+      <p class="main__paragraph">Onwin sanal bahis sitesine giriş işlemleri için bazı detaylar özelinde mutlaka dikkatli olunması gerekir ve bu detaylar ise aşağıdakiler gibidir:</p>
+      <ul class="main__list">
+        <li>İlk olarak giriş işlemleri adına mutlaka güncel bir giriş adresine sahip olmanız 
+          gerekir. Güvenilir giriş adresi temini için de yine aynı şekilde güvenilir 
+          kaynaklara sahip olmanız büyük önem taşır.</li>
+        <li>Giriş işlemleri konusunda yatırımcıların sitemiz gibi temel bir kaynaktan 
+          yararlanmalarında herhangi bir sakınca yoktur. </li>
+        <li>Onwin giriş adresi temini konusunda önem taşıyan seçeneklerden bir diğer ise
+          sosyal medya kanallarıdır. Bu sosyal medya kanallarından da adres temini 
+          sağlamanız mümkün olabilir.</li>
+        <li>Tüm bunların yanı sıra siteye kayıt olurken kullanmış olduğunuz e-posta 
+          adresine ve cep telefonu numarasına da giriş adresi konusunda birçok 
+          seçenek sunulacaktır. Bu yöntem özelinde de giriş adresi temini sağlamanız 
+          mümkün olabilir.</li>
+        <li>Ayrıca son olarak mobil giriş gibi en güvenilir giriş yöntemlerini de kullanarak 
+          giriş işlemlerini gerçekleştirmeniz söz konusu olabilir.</li>
+      </ul>
+      <p class="main__paragraph">Onwin'e giriş yapmak için aşağıdaki adımları takip edebilirsiniz:</p>
+        <ol class="main__list numbers__list">
+          <li class="list__element">Onwin'in resmi web sitesine gidin.</li>
+          <li class="list__element">Ana sayfada sağ üst köşede yer alan "Giriş" veya "Hesabınıza Giriş Yapın" butonuna tıklayın.</li>
+          <li class="list__element">Kullanıcı adınızı veya e-posta adresinizi girin.</li>
+          <li class="list__element">Şifrenizi girin.</li>
+          <li class="list__element">"Giriş Yap" veya benzeri bir butona tıklayarak giriş işlemini tamamlayın.</li>
+        </ol>
+      <p class="main__paragraph">Bu adımları takip ederek Onwin hesabınıza giriş yapabilirsiniz.</p>
+      <h2 id="guvenilir">Onwin Güvenilir mi?</h2>
+      <table class="table">
+        <tr class="table-row">
+          <td class="table-title first-table-title">Hoş Geldin Bonusu</td>
+          <td class="table-description">2500 TL </td>
+        </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">Doğum Günü Bonusu</td>
+          <td class="table-description">250 TL </td>
+        </tr>
+        <tr class="table-row">
+          <td>
+            <div class="table-title first-table-title">Yatırım Bonusu1</div>
+          </td>
+          <td class="table-description">
+            <div class="block">%50</div>
+            <div class="block">250 TL’lik yapılan yatırım işlemine %100 250 free spin bonusu</div>
+            <div class="block">%25 oranında her slot yatırımına bonus</div>
+            <div class="block">%10 oranında spor yatırımlarınıza özel bonus</div>
+            <div class="block">%35 oranında canlı Casino yatırım bonusu</div>
+          </td>
+        </tr>
+        <tr class="table-row">
+          <td>
+            <div class="table-title first-table-title">Günlük Bonus</div>
+          </td>
+          <td class="table-description">
+            <div class="block">Günlük olarak sunulan %25 oranında freespin ve %20 oranında discount</div>
+            <div class="block">Her gün 100 freespin hediye!</div>
+            <div class="block">Her gün 100 TL’lik bedava freebet</div>
+          </td>
+        </tr>
+        <tr class="table-row">
+          <td>
+            <div class="table-title first-table-title">Aylık Bonus</div>
+          </td>
+          <td class="table-description">
+            <div class="block">Her ay özelinde %50 oranında çevrimsiz bonus</div>
+            <div class="block">Her ay milyonlarca TL ve yüzbinlerce TL tutarında ödül havuzlu bonuslar</div>
+          </td>
+        </tr>
+      <tr class="table-row">
+        <td class="table-title first-table-title">Deneme Bonusu</td>
+        <td class="table-description">101 TL değerinde bedava spor bahis bonusu ya da 101 adet Freespin</td>
+      </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">Çevrimsiz Para Yatırma Bonusu</td>
+          <td class="table-description">%20 </td>
+        </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">Iade Bonusu</td>
+          <td class="table-description">Major liglerde 2500 TL tutarında %100 oranında</td>
+        </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">Spor Bonusu</td>
+          <td class="table-description">Onwin’de %500 oranında 1250 TL</td>
+        </tr>
+        <tr class="table-row">
+          <td class="table-title first-table-title">Discount Bonusu</td>
+          <td class="table-description">İlk 10 para yatırma işlemine özel %100 oranında double discount bonusu</td>
+        </tr>
+    </table>
+    <h2 id=”finansal”>Onwin Finansal İşlemler</h2>
+      <p class="main__paragraph">
+        Onwin bünyesinde yapılan finansal işlemler para yatırma ve para çekme yönlü olarak
+        iki farklı yöne ayrılan işlemlerdir. Genel oranlamaya bakıldığı takdirde firmanın en 
+        geniş ve en hızlı para transfer işlemine sahip olduğu, Türkiye sanal bahis sitelerine 
+        kıyasla rasyonel bir sonuçtur. Bununla birlikte para transferlerinde de canlı destek 
+        birimleriyle 7/24 direkt olarak yatırımcılara destek olurlar. Haliyle bu durum sürecin 
+        çok daha ciddi bir şekilde hızlanmasına neden olmaktadır.
+      </p>
+      <table class="table third-table">
+        <tr class="table-row">
+          <td class="table__element table__element--first">İşlem Türü</td>
+          <td class="table__element">Minimum Yatırım (TRY)</td>
+          <td class="table__element">Maksimum Yatırım (TRY)</td>
+          <td class="table__element">Minimum Çekim (TRY)</td>
+          <td class="table__element">Maksimum Çekim (TRY)</td>
+        </tr>
+        <tr class="table-row">
+          <td class="table__element table__element--first">Yatırım</td>
+          <td class="table__element">50 TRY</td>
+          <td class="table__element">10.000 TRY</td>
+          <td class="table__element">100 TRY</td>
+          <td class="table__element">10.000 TRY</td>
+        </tr>
+        <tr class="table-row">
+          <td class="table__element table__element--first">Çekim</td>
+          <td class="table__element">100 TRY</td>
+          <td class="table__element">10.000 TRY</td>
+          <td class="table__element">200 TRY</td>
+          <td class="table__element">20.000 TRY</td>
+        </tr>
+    </table>
+      <h3 id=”yatirma”>Onwin Para Yatırma</h3>
+      <p class="main__paragraph">Onwin, para yatırma işlemleriniz için siz değerli yatırımcılara onlarca seçenek sunar. 
+        Hatta aynı para yatırma kanalından birden fazla seçenek sunduğu da görülür. Tüm 
+        bunlar, yatırım işlemlerinizin hesabınıza kısa süre içerisinde yansıması içindir. 
+        Saniyelik dahi olsa herhangi bir yatırım fırsatını kaçırmanızı istemeyen Onwin, bu 
+        nedenle para yatırma konusunda son derece kapsamlı bir hizmete sahiptir.
+      </p>
+      <p class="main__paragraph">Firma tarafından üyelere sağlanan yatırım seçenekleri ise aşağıdaki gibidir:</p>
+      <ul class="main__list">
+        <li>Banka EFT/havale/FAST gibi yöntemlerle para yatırma</li>
+        <li>Kripto para üzerinden anlık ve hızlı bir şekilde yatırım</li>
+        <li>Papara ile 7/24 yüksek limitli hızlı transfer</li>
+        <li>QR Kod ile para yatırma</li>
+        <li>CepBank ile belirli limitlerde, anlık ve kolay bir şekilde yatırma</li>
+        <li>Kredi kartı ile yatırım (sadece kredi kartı doğrulaması yapmış hesaplar bu yöntemden yararlanabilirler)</li>
+        <li>Payfix, MEFETE vb. ödeme kanalları üzerinden para yatırma</li>
+      </ul>
+      <p class="main__paragraph">Tüm bunların dışında belirli aralıklarda yeni para yatırma yöntemleri de yatırımcılara sunulabilmektedir.</p>
+      <h3 id=”cekme”>Onwin Para Çekme</h3>
+      <p class="main__paragraph">Onwin firmasının para çekme işlemleri konusunda sağlamış olduğu imkanlar da tıpkı 
+        para yatırma işleminde olduğu gibi son derece fazladır. Para çekmek isteyen 
+        yatırımcılar alt kısımda yer alan tüm seçenekleri tercih edebilirler:</p>
+        <ul class="main__list">
+          <li>Kripto para yöntemleri üzerinden para çekme</li>
+          <li>Banka hesabınıza nakit aktarımı</li>
+          <li>MEFETE, Mpay, Payfix vb. para çekme kanalları üzerinden çekim</li>
+          <li>Kripto para birimleri üzerinden para çekimi</li>
+          <li>QR ile çekim</li>
+          <li>CepBank ile çekim</li>
+        </ul>
+        <h3 id=”cekme”>Onwin Para Çekme</h3>
+        <p class="main__paragraph">Onwin firmasının iletişim konusunda son derece gelişmiş bir firma olduğu bilinen bir 
+          gerçektir ve bu nedenle yatırımcılar, bu firmaya bu denli büyük bir güven 
+          beslemektedirler. Firmanın iletişim anlamında sağlamış olduğu birçok seçenek 
+          vardır. En temelinde canlı destek, Telegram, mail ve Whatsapp gibi seçenekler yer 
+          alır.
+        </p>
+        <h2 id=”destek”>Onwin Canlı Destek</h2>
+        <p class="main__paragraph">Canlı destek, yatırımcıların en çok tercih etmiş oldukları iletişim kanalı olarak bilinir. 
+          Bu iletişim kanalı sayesinde yatırımcıların herhangi bir problem yaşamdan kısa süre 
+          içerisinde Onwin ile iletişim kurmaları söz konusu olur. Sadece birkaç adımda hangi 
+          konu hakkında destek alacağınız konusunda canlı destek penceresinde seçim 
+          yapmanız yeterli olacaktır.
+        </p>
+        <h3 id=”tm”>Onwin Telegram</h3>
+        <p class="main__paragraph">Telegram da yatırımcılar tarafından tercih edilen iletişim kanallarından biridir. 
+          Yatırımcılar Telegram üzerinden Onwin ile hem iletişim kurmaktadırlar hem de direkt 
+          olarak firmaya dair en son gelişmelerden haberdar olurlar. Giriş adresleri, yeni 
+          bonuslar, yeni yatırım seçenekleri ve iletişim gibi birçok konu, Telegram üzerinden 
+          hızlı bir şekilde ilerler.
+        </p>
+        <h3 id=”mail”>Onwin Mail Destek</h3>
+        <p class="main__paragraph">Onwin’in en çok tercih edilen iletişim kanallarından bir diğeri ise mail üzerinden 
+          destektir. Direkt olarak <a href="/">destek@onwin.com</a> isimli e-posta adresi ile Onwin’le iletişime
+          geçmeniz söz konusu olacaktır. Atacağınız her açıklayıcı mail, direkt olarak cevap 
+          alacak ve en kısa sürede tarafınıza dönüş yapılacaktır.
+        </p>
+        <h3 id=”watsapp”>Onwin Watsapp</h3>
+        <p class="main__paragraph">Whatsapp duyuru ve iletişim kanalı olan ender firmalardan biri olan Onwin, bu 
+          platform üzerinden de yatırımcılarıyla 7/24 iletişim halinde olan bir firmadır. Bu 
+          nedenle herhangi bir problem yaşamadan yatırım işlemlerinin gerçekleştirilmesi söz 
+          konusu olur. İletişim anlık olarak sağlanır ve yatırımcılar her konuda bilgi sahibi 
+          olarak, yatırımlarını çok daha kendilerinden emin bir şekilde yürütebilirler.
+        </p>
+        <h2 id=”uyelik”>Onwin Üyelik</h2>
+        <p class="main__paragraph">Onwin firmasının üyelik işlemleri temel olarak 4 adımdan oluşmaktadır. Bu adımlar ise aşağıdaki gibi yatırımcıların karşılarına çıkacaktır. Temel olarak üyelik işlemleri şu şekilde ilerler:</p>
+        <ol class="main__list numbers__list">
+          <li class="list__element">İlk adımda ön kayıt adımı yer alır ve bu adımda yatırımcılar direkt olarak, 
+            temel üyelik bilgilerini belirtirler.</li>
+          <li class="list__element">İkinci adımda yatırımcıların kapsamlı bir şekilde üyelik bilgilerini doldurmaları 
+            ve hesap doğrulama aşamasına geçmeleri gerekir.</li>
+          <li class="list__element">Hesap doğrulama aşamasında çeşitli belgeler beyan edilir ve hesap 
+            doğrulama işlemi tamamlanır.</li>
+          <li class="list__element">Son olarak hesap aktivasyonu yapılarak, yatırımcıların para yatırma ve para 
+            çekme gibi konularda çok daha konforlu bir şekilde hareket etmeleri söz 
+            konusu olur.</li>
+        </ol>
+    </main>
+    <footer class="footer">
+      <p class="footer-copy">Tüm haklara ve koşullara saygı duyulur. Onwin © 2023</p>
+    </footer>
   </body>
 </html>
