--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       </nav>
     </header>
     <main class="main">
+      <div class="contacts__container">
         <ul class="contacts">
           <li><a href="#giris">Onwin Giriş</a></li>
           <li><a href="#guvenilir">Onwin Güvenilir mi?</a></li>
@@ -34,6 +35,8 @@
           <li><a href="#watsapp">Onwin Watsapp</a></li>
           <li><a href="#uyelik">Onwin Üyelik</a></li>
         </ul>
+        <img src="images/homepage.jpg" alt="homepage">
+      </div>
       <h1 class="main-title">Onwin</h1>
       <p class="main__paragraph">Onwin, çevrimiçi bir bahis ve casino platformudur. Geniş bir spor bahisleri seçeneği 
         sunar ve popüler casino oyunlarına erişim sağlar. Güvenilir bir lisansa sahip olan 
@@ -91,23 +94,28 @@
         direkt olarak bahis keyfini sürme gibi bir eylem içerisinde olurlar.
       </p>
       <h2 id=’’giris”>Onwin Giriş</h2>
-      <p class="main__paragraph">Onwin sanal bahis sitesine giriş işlemleri için bazı detaylar özelinde mutlaka dikkatli olunması gerekir ve bu detaylar ise aşağıdakiler gibidir:</p>
-      <ul class="main__list">
-        <li>İlk olarak giriş işlemleri adına mutlaka güncel bir giriş adresine sahip olmanız 
-          gerekir. Güvenilir giriş adresi temini için de yine aynı şekilde güvenilir 
-          kaynaklara sahip olmanız büyük önem taşır.</li>
-        <li>Giriş işlemleri konusunda yatırımcıların sitemiz gibi temel bir kaynaktan 
-          yararlanmalarında herhangi bir sakınca yoktur. </li>
-        <li>Onwin giriş adresi temini konusunda önem taşıyan seçeneklerden bir diğer ise
-          sosyal medya kanallarıdır. Bu sosyal medya kanallarından da adres temini 
-          sağlamanız mümkün olabilir.</li>
-        <li>Tüm bunların yanı sıra siteye kayıt olurken kullanmış olduğunuz e-posta 
-          adresine ve cep telefonu numarasına da giriş adresi konusunda birçok 
-          seçenek sunulacaktır. Bu yöntem özelinde de giriş adresi temini sağlamanız 
-          mümkün olabilir.</li>
-        <li>Ayrıca son olarak mobil giriş gibi en güvenilir giriş yöntemlerini de kullanarak 
-          giriş işlemlerini gerçekleştirmeniz söz konusu olabilir.</li>
-      </ul>
+      <div class="giris__container">
+        <div>
+          <p class="main__paragraph">Onwin sanal bahis sitesine giriş işlemleri için bazı detaylar özelinde mutlaka dikkatli olunması gerekir ve bu detaylar ise aşağıdakiler gibidir:</p>
+          <ul class="main__list">
+            <li>İlk olarak giriş işlemleri adına mutlaka güncel bir giriş adresine sahip olmanız 
+              gerekir. Güvenilir giriş adresi temini için de yine aynı şekilde güvenilir 
+              kaynaklara sahip olmanız büyük önem taşır.</li>
+            <li>Giriş işlemleri konusunda yatırımcıların sitemiz gibi temel bir kaynaktan 
+              yararlanmalarında herhangi bir sakınca yoktur. </li>
+            <li>Onwin giriş adresi temini konusunda önem taşıyan seçeneklerden bir diğer ise
+              sosyal medya kanallarıdır. Bu sosyal medya kanallarından da adres temini 
+              sağlamanız mümkün olabilir.</li>
+            <li>Tüm bunların yanı sıra siteye kayıt olurken kullanmış olduğunuz e-posta 
+              adresine ve cep telefonu numarasına da giriş adresi konusunda birçok 
+              seçenek sunulacaktır. Bu yöntem özelinde de giriş adresi temini sağlamanız 
+              mümkün olabilir.</li>
+            <li>Ayrıca son olarak mobil giriş gibi en güvenilir giriş yöntemlerini de kullanarak 
+              giriş işlemlerini gerçekleştirmeniz söz konusu olabilir.</li>
+          </ul>
+        </div>
+        <img src="images/giris.png" alt="giris">
+      </div>
       <p class="main__paragraph">Onwin'e giriş yapmak için aşağıdaki adımları takip edebilirsiniz:</p>
         <ol class="main__list numbers__list">
           <li class="list__element">Onwin'in resmi web sitesine gidin.</li>
@@ -229,6 +237,7 @@
         <li>Payfix, MEFETE vb. ödeme kanalları üzerinden para yatırma</li>
       </ul>
       <p class="main__paragraph">Tüm bunların dışında belirli aralıklarda yeni para yatırma yöntemleri de yatırımcılara sunulabilmektedir.</p>
+      <img src="images/payments.png" alt="payments" class="payments">
       <h3 id=”cekme”>Onwin Para Çekme</h3>
       <p class="main__paragraph">Onwin firmasının para çekme işlemleri konusunda sağlamış olduğu imkanlar da tıpkı 
         para yatırma işleminde olduğu gibi son derece fazladır. Para çekmek isteyen 
@@ -241,7 +250,6 @@
           <li>QR ile çekim</li>
           <li>CepBank ile çekim</li>
         </ul>
-        <h3 id=”cekme”>Onwin Para Çekme</h3>
         <p class="main__paragraph">Onwin firmasının iletişim konusunda son derece gelişmiş bir firma olduğu bilinen bir 
           gerçektir ve bu nedenle yatırımcılar, bu firmaya bu denli büyük bir güven 
           beslemektedirler. Firmanın iletişim anlamında sağlamış olduğu birçok seçenek 
@@ -249,12 +257,15 @@
           alır.
         </p>
         <h2 id=”destek”>Onwin Canlı Destek</h2>
-        <p class="main__paragraph">Canlı destek, yatırımcıların en çok tercih etmiş oldukları iletişim kanalı olarak bilinir. 
-          Bu iletişim kanalı sayesinde yatırımcıların herhangi bir problem yaşamdan kısa süre 
-          içerisinde Onwin ile iletişim kurmaları söz konusu olur. Sadece birkaç adımda hangi 
-          konu hakkında destek alacağınız konusunda canlı destek penceresinde seçim 
-          yapmanız yeterli olacaktır.
-        </p>
+        <div class="support__container">
+          <p class="main__paragraph">Canlı destek, yatırımcıların en çok tercih etmiş oldukları iletişim kanalı olarak bilinir. 
+            Bu iletişim kanalı sayesinde yatırımcıların herhangi bir problem yaşamdan kısa süre 
+            içerisinde Onwin ile iletişim kurmaları söz konusu olur. Sadece birkaç adımda hangi 
+            konu hakkında destek alacağınız konusunda canlı destek penceresinde seçim 
+            yapmanız yeterli olacaktır.
+          </p>
+          <img src="images/onwin_support.png" alt="support">
+        </div>
         <h3 id=”tm”>Onwin Telegram</h3>
         <p class="main__paragraph">Telegram da yatırımcılar tarafından tercih edilen iletişim kanallarından biridir. 
           Yatırımcılar Telegram üzerinden Onwin ile hem iletişim kurmaktadırlar hem de direkt 
@@ -276,18 +287,23 @@
           olarak, yatırımlarını çok daha kendilerinden emin bir şekilde yürütebilirler.
         </p>
         <h2 id=”uyelik”>Onwin Üyelik</h2>
-        <p class="main__paragraph">Onwin firmasının üyelik işlemleri temel olarak 4 adımdan oluşmaktadır. Bu adımlar ise aşağıdaki gibi yatırımcıların karşılarına çıkacaktır. Temel olarak üyelik işlemleri şu şekilde ilerler:</p>
-        <ol class="main__list numbers__list">
-          <li class="list__element">İlk adımda ön kayıt adımı yer alır ve bu adımda yatırımcılar direkt olarak, 
-            temel üyelik bilgilerini belirtirler.</li>
-          <li class="list__element">İkinci adımda yatırımcıların kapsamlı bir şekilde üyelik bilgilerini doldurmaları 
-            ve hesap doğrulama aşamasına geçmeleri gerekir.</li>
-          <li class="list__element">Hesap doğrulama aşamasında çeşitli belgeler beyan edilir ve hesap 
-            doğrulama işlemi tamamlanır.</li>
-          <li class="list__element">Son olarak hesap aktivasyonu yapılarak, yatırımcıların para yatırma ve para 
-            çekme gibi konularda çok daha konforlu bir şekilde hareket etmeleri söz 
-            konusu olur.</li>
-        </ol>
+        <div class="registration__container">
+          <img src="images/registration.png" alt="registration">
+          <div>
+            <p class="main__paragraph">Onwin firmasının üyelik işlemleri temel olarak 4 adımdan oluşmaktadır. Bu adımlar ise aşağıdaki gibi yatırımcıların karşılarına çıkacaktır. Temel olarak üyelik işlemleri şu şekilde ilerler:</p>
+            <ol class="main__list numbers__list">
+              <li class="list__element">İlk adımda ön kayıt adımı yer alır ve bu adımda yatırımcılar direkt olarak, 
+                temel üyelik bilgilerini belirtirler.</li>
+              <li class="list__element">İkinci adımda yatırımcıların kapsamlı bir şekilde üyelik bilgilerini doldurmaları 
+                ve hesap doğrulama aşamasına geçmeleri gerekir.</li>
+              <li class="list__element">Hesap doğrulama aşamasında çeşitli belgeler beyan edilir ve hesap 
+                doğrulama işlemi tamamlanır.</li>
+              <li class="list__element">Son olarak hesap aktivasyonu yapılarak, yatırımcıların para yatırma ve para 
+                çekme gibi konularda çok daha konforlu bir şekilde hareket etmeleri söz 
+                konusu olur.</li>
+            </ol>
+          </div>
+        </div>
     </main>
     <footer class="footer">
       <p class="footer-copy">Tüm haklara ve koşullara saygı duyulur. Onwin © 2023</p>
